...
            .testTag("detail_screen")
            .padding(20.dp),
        verticalArrangement = Arrangement.spacedBy(16.dp),
    ) {
        Text(
            stringResource(component.labelRes),
            Modifier.testTag("detail_component_title"),
            style = MaterialTheme.typography.headlineSmall,
        )
        Text(
            stringResource(component.descriptionRes),
            style = MaterialTheme.typography.bodyLarge,
            color = MaterialTheme.colorScheme.onSurfaceVariant,
...
